Fix js errors on project dashboard when gap between sprints

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -1287,3 +1287,7 @@ body {
     z-index: 3;
   }
 }
+
+a.disabled-link {
+  pointer-events: none;
+}
